--- a/rootdir/init.SHV-E210K.rc
+++ b/rootdir/init.SHV-E210K.rc
@@ -1,5 +1,5 @@
 import init.target.rc
-import init.smdk4x12.usb.rc
+import init.SHV-E210K.usb.rc
 
 on init
     chmod 0701 /mnt/media_rw
@@ -35,7 +35,7 @@ on init
 
 on fs
     mkdir /preload
-    mount_all /fstab.smdk4x12
+    mount_all /fstab.SHV-E210K
 
     setprop ro.crypto.fuse_sdcard true
 
@@ -161,6 +161,10 @@ on post-fs-data
     chown system system /sys/class/mdnie/mdnie/negative
     write /sys/class/mdnie/mdnie/scenario 0
     write /sys/class/mdnie/mdnie/mode 0
+
+# tdmb ownership
+    chown system system /dev/tdmb
+    chmod 0660 /dev/tdmb
 
 # Permissions for System Server and daemons.
     chown radio system /sys/android_power/state
@@ -389,8 +393,8 @@ on post-fs-data
 on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
-    setprop ro.build.product smdk4x12
-    setprop ro.product.device smdk4x12
+    setprop ro.build.product SHV-E210K
+    setprop ro.product.device SHV-E210K
     setprop wifi.interface wlan0
 
 # fake some battery state
@@ -518,3 +522,11 @@ service bootsnd /system/bin/tinyplay /system/etc/sound/silence.wav -D 0 -d 0 -p 
     user root
     group audio
     oneshot
+
+# Call Boeffla-Kernel init script
+service boeffla-init /sbin/boeffla-init.sh
+    class main
+    user root
+    group root
+    oneshot
+
